fixes bug 202188 "Gopher support completely defunct" r=dougt sr=bz